[package]
name = "uniswap-v3-mev"
version = "0.1.0"
edition = "2021"


[dependencies]
# Ethereum
ethers = { version = "2.0.14", features = ["ws"] }
ethers-signers = { version = "2.0.14", default-features = false }
ethers-middleware = "2.0.14"
ethers-providers = { version = "2.0.14" }
ethabi = "18.0.0"
secp256k1 = { version = "0.27.0", default-features = false }
ethers-core = { version = "2.0.7" }
ethers-flashbots = "0.15.0"

# Logging
env_logger = "0.11.5"
pretty_env_logger = "0.5.0"

# Asynchronous
async-trait = { version = "0.1.58", default-features = false }
futures-util = "0.3.28"
futures-core = "0.3"
tokio = { version = "1.43.1", features = ["macros", "rt-multi-thread", "full"] }
futures = "0.3.17"

# Networking
reqwest = { version = "0.11", default-features = false }
url = { version = "2.3.1", default-features = false }

# Utilities
lazy_static = "1.4.0"
chrono = { version = "0.4.22", features = ["default", "serde"] }
webbrowser = "0.8.10"
tiny-keccak = "2.0.2"
num-traits = "0.2"
hex = "0.4.3"
rustc-hex = "2.0.0"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"

# HTTP
warp = "0.3"

# Bytes
bytes = "1.2.1"

# Environment and Errors
dotenvy = "0.15"
eyre = "0.6"
tracing-subscriber = "0.3.18"
tracing = "0.1.40"
serde_derive = "1.0.208"
config = "0.14.0"
log = "0.4.22"
colored = "2.1.0"
